<resources>
    <string name="app_name">Cẩm nang ẩm thực</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="back">Quay lại</string>
    <string name="login">Đăng nhập</string>
    <string name="recipe">Công thức</string>
    <string name="more">Xem thêm...</string>
    <string name="event">Dịp lễ</string>
    <string name="category">Danh mục</string>
    <string name="areas">Vùng miền</string>
    <string name="placeholder_category_name">Tên danh mục</string>
    <string name="placeholder_area_name">Tên vùng miền</string>
    <string name="placeholder_event_name">Tên dịp lễ</string>
    <string name="placeholder_detail">Chi tiết</string>
    <string name="placeholder_ingredients">Danh sách nguyên liệu</string>
    <string name="image">Hình ảnh</string>
    <string name="application">Ứng dụng</string>
    <string name="about">Về ứng dụng</string>
    <string name="other">Khác</string>
    <string name="drawer_open">Mở</string>
    <string name="drawer_close">Đóng</string>
    <string name="about_dialog">Về ứng dụng</string>
    <string name="about_content">Việt Nam có rất nhiều món ăn truyền thống, đặc biệt do địa lý trả dài nên ẩm thực Việt Nam có sự đa dạng. Và không phải người dân nào cũng có thể biết hết được các món ăn truyền thống của dân tộc mình. Vì vậy, một ứng dụng di động cho phép người dùng có thể tra cứu về các món ăn truyền thống có ý nghĩa thực tiễn rất cao. Các món ăn được chia theo miền, theo thời điểm được sử dụng (thường ngày, ngày Lễ tết, …).</string>
    <string name="dialog_ok">OK</string>
    <string name="home">Cẩm nang ẩm thực</string>
    <string name="admin">Quản trị</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="id">Mã</string>
    <string name="name">Tên</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="add">Thêm mới</string>
    <string name="btn_done">Hoàn thành</string>
    <string name="label_no_selected">Chưa chọn</string>
    <string name="kcal">KCal</string>
    <string name="minsToCook">Thời gian nấu</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="hint">hint</string>
    <string name="intro">Giới thiệu</string>
    <string name="placeholder_recipe_name">Tên công thức</string>
    <string name="filter">Lọc</string>
    <string name="keyword">Từ khóa</string>
    <string name="search">Tìm kiếm</string>
    <string name="intergrates">Danh sách nguyên liệu</string>
    <string name="details">Chi tiết</string>
</resources>
