<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAreaAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/areas"/>

        <Button
            android:id="@+id/btnEventAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event"/>

        <Button
            android:id="@+id/btnCategoryAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"/>

        <Button
            android:id="@+id/btnRecipeAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe"/>
    </LinearLayout>


</FrameLayout>