<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.main.MainFragment"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe"/>

        <TextView
            android:id="@+id/tvLoadMoreRecipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/areas"/>

        <TextView
            android:id="@+id/tvLoadMoreAreas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAreas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"/>

        <TextView
            android:id="@+id/tvLoadMoreCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event"/>

        <TextView
            android:id="@+id/tvLoadMoreEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>